add changes to src paths

--- a/o_meni.html
+++ b/o_meni.html
@@ -113,9 +113,9 @@
     Upisala sam ovaj faks jer je dosta kreativan i nudi mnoge mogućnosti.
   </p>
 
-  <img src="slike2/IMG_6126.jpg" alt="Lana slika 1">
-  <img src="slike2/slika2.jpg" alt="Lana slika 2">
-  <img src="slike2/slika1.jpg" alt="Lana slika 3">
+  <img src="IMG_6126.jpg" alt="Lana slika 1">
+  <img src="slika2.jpeg" alt="Lana slika 2">
+  <img src="slika1.jpeg" alt="Lana slika 3">
 
   <p>Moj video možete pogledati <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">ovdje</a>.</p>
 
