--- a/vjezbe.html
+++ b/vjezbe.html
@@ -107,26 +107,26 @@
   <h2>Ovo su vježbe koje smo radili kroz semestar</h2>
 
   <p>Vektorska grafika</p>
-  <img src="slike2/vježba2.jpg" alt="vježba2">
-  <img src="slike2/vježba3.jpg" alt="vježba3">
-  <img src="slike2/vježba4.jpg" alt="vježba4">
-  <img src="slike2/projektni1.jpg" alt="projektni1">
+  <img src="vježba2.jpg" alt="vježba2">
+  <img src="vježba3.jpg" alt="vježba3">
+  <img src="vježba4.jpg" alt="vježba4">
+  <img src="projektni1.jpg" alt="projektni1">
 
   <p>Piksel grafika</p>
-  <img src="slike2/vjezba6.jpg" alt="vjezba6">
-  <img src="slike2/vježba7.jpg" alt="vježba7">
-  <img src="slike2/vježba8.jpg" alt="vježba8">
-  <img src="slike2/vježba9.jpg" alt="vježba9">
-  <img src="slike2/projektni2.jpg" alt="projektni2">
+  <img src="vježba6.jpg" alt="vjezba6">
+  <img src="vježba7.jpg" alt="vježba7">
+  <img src="vježba8.jpg" alt="vježba8">
+  <img src="vježba9.jpg" alt="vježba9">
+  <img src="projektni2.jpg" alt="projektni2">
 
   <p>Obrada videa i web</p>
   <video controls>
-    <source src="video/moj_video1.mp4" type="video/mp4">
+    <source src="moj_video1.mp4" type="video/mp4">
     Vaš preglednik ne podržava prikaz videa.
   </video>
 
   <p>Koristila sam fade in, spin i još neke efekte</p>
-  <img src="video/moj_cinemagraf.gif" alt="cinemagraf">
+  <img src="moj_cinemagraf.gif" alt="cinemagraf">
 
 </body>
 </html>
