--- a/video.html
+++ b/video.html
@@ -90,8 +90,8 @@
     </ul>
   </nav>
 
-  <video controls>
-    <source src="video/cinemagraf-projekt.mp4" type="video/mp4">
+  <video controls style="width: 300px; height: auto;">
+    <source src="cinemagraf-projekt.mp4" type="video/mp4">
   </video>
 
   <p>
