--- a/o_meni.html
+++ b/o_meni.html
@@ -113,7 +113,7 @@
     Upisala sam ovaj faks jer je dosta kreativan i nudi mnoge mogućnosti.
   </p>
 
-  <img src="IMG_6126.jpg" alt="Lana slika 1">
+  <img src="IMG_6126.JPG" alt="Lana slika 1">
   <img src="slika2.jpeg" alt="Lana slika 2">
   <img src="slika1.jpeg" alt="Lana slika 3">
 
